...
      />
      <Tabs.Screen
        options={{
          title: t("Home"),
          tabBarIcon: ({ color }) => <TabBarIcon name="home" color={color} />,
          headerLeft: () => (
            <VStack className="p-4" testID="home-tab">
              <Heading className="text-white">Hello, {customer?.firstName}</Heading>
              <Text className="text-white">Welcome to Remirage</Text>
            </VStack>
          ),
          headerTitle: "",
        }}
...
